# Ebi

./: .gitignore  LICENSE
ebi/: Cargo.toml
ebi/daemon/: Cargo.toml
ebi/daemon/src/: main.rs  query.rs  tag.rs  workspace.rs
ebi/daemon/src/query/: file_order.rs  mod.rs
ebi/daemon/src/services/: cache.rs  mod.rs  peer.rs  query.rs  rpc.rs  workspace.rs
ebi/daemon/src/shelf/: file.rs  node.rs  shelf.rs
ebi/macro/: Cargo.toml
ebi/proto/: Cargo.toml  build.rs
ebi/proto/src/: ebi.proto  lib.rs  rpc.rs
file-manager/: Cargo.toml  build.rs
file-manager/src/: main.rs  query.rs  rpc.rs  tag.rs  workspace.rs
file-manager/src/rpc/: ebi.proto  file.proto
file-manager/src/services/: cache.rs  peer.rs  query.rs  rpc.rs
file-manager/src/shelf/: file.rs  mod.rs  shelf.rs
