[package]
name = "ebi"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
chrono = { version = "0.4.40", features = ["serde"] }
tokio = "1.44.1"
tower = "0.5.2"
#serde = { version = "1.0.218", features = ["derive"] }
peg = "0.8.5"
iroh = "0.34.1"
iroh-base = "0.34.1"
anyhow = "1.0.97"
rand = "0.8.5"
paste = "1.0.15"
uuid = { version = "1.17.0", features = ["v7", "serde"] }
regex = "1.11.1"
ebi-proto = { path = "../proto" }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
